--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,38 +7,38 @@
 </head>
 <body>
   <div class="container-fluid text-center">
-    <div></div><h2>Manage users</h2></div>
-  </div>
-    <a class="h3">Add New User</a>
-  <div>
-  </div>
-  <div>
-    <table class="table table-bordered">
-      <thead class="thead-dark">
-        <tr>
-          <th>ID</th>
-          <th>E-mail</th>
-          <th>First name</th>
-          <th>Last Name</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-      <th:block th:each="user : ${listusers}">
-        <tr>
-          <td>[[${user.id}]]</td>
-          <td>[[${user.email}]]</td>
-          <td>[[${user.firstname}]]</td>
-          <td>[[${user.lastname}]]</td>
-          <td>
-            <a class="h4 mr-3" th:href="@{"/users/edit/"}">Edit</a>
-            <a class="h4">Delete</a>
-          </td>
-        </tr>
-      </th:block>
-      </tbody>
+    <div><h2>Manage users</h2></div>
+    <div class="m-2">
+        <a class="h3" th:href="@{'/users/new'}">Add New User</a>
+    </div>
+    <div>
+      <table class="table table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th>ID</th>
+            <th>E-mail</th>
+            <th>First name</th>
+            <th>Last Name</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+        <th:block th:each="user : ${listusers}">
+          <tr>
+            <td>[[${user.id}]]</td>
+            <td>[[${user.email}]]</td>
+            <td>[[${user.firstname}]]</td>
+            <td>[[${user.lastname}]]</td>
+            <td>
+              <a class="h4 mr-3" th:href="@{'/users/edit/'+ ${user.id}}">Edit</a>
+              <a class="h4"th:href="@{'/users/delete/'+${user.id}}">Delete</a>
+            </td>
+          </tr>
+        </th:block>
+        </tbody>
 
-    </table>
+        </table>
+    </div>
   </div>
 </body>
 </html>
