--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -2,29 +2,56 @@
 <html lang="en" xmlns:th="http:thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add new user</title>
+    <title>[[${PageTitle}]]</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 <div class="container-fluid">
-    <div class="text-center"><h2>Add new user</h2></div>
+    <div class="text-center"><h2>[[${PageTitle}]]</h2></div>
     <form th:action="@{/users/save}" method="post" th:object="${user}" style="max-width: 500px; margin: 0 auto;">
         <div class="border border-secondary rounded p-3">
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">E-mail :</label>
                 <div class="col-sm-8">
-                   <input type="email" th:field="*{email}" class="form-control">
+                   <input type="email" th:field="*{email}" class="form-control" required minlength="8" maxlength="45">
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">First Name :</label>
                 <div class="col-sm-8">
-                    <input type="email" th:field="*{email}" class="form-control">
+                    <input type="text" th:field="*{firstname}" class="form-control" required minlength="2" maxlength="45">
                 </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Last Name :</label>
+                <div class="col-sm-8">
+                    <input type="text" th:field="*{lastname}" class="form-control" required minlength="2" maxlength="45" >
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Password :</label>
+                <div class="col-sm-8">
+                    <input type="password" th:field="*{password}" class="form-control" required minlength="5" maxlength="15">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Enabled :</label>
+                <div class="col-sm-8">
+                    <input type="checkbox" th:field="*{enabled}">
+                </div>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary m-2">Save</button>
+                <button type="button" class="btn btn-secondary m-2" onclick="cancelForm()">Cancel</button>
             </div>
         </div>
     </form>
 </div>
+<script type="text/javascript">
+    function cancelForm(){
+        window.location='[[@{/users}]]'
+    }
+</script>
 
 </body>
 </html>
