--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,6 +11,9 @@
     <div class="m-2">
         <a class="h3" th:href="@{'/users/new'}">Add New User</a>
     </div>
+    <div th:if="${message}" class="alert alert-success text-center">
+        [[${message}]]
+    </div>
     <div>
       <table class="table table-bordered">
         <thead class="thead-dark">
@@ -19,6 +22,7 @@
             <th>E-mail</th>
             <th>First name</th>
             <th>Last Name</th>
+            <th>Enabled</th>
             <th></th>
           </tr>
         </thead>
@@ -29,6 +33,8 @@
             <td>[[${user.email}]]</td>
             <td>[[${user.firstname}]]</td>
             <td>[[${user.lastname}]]</td>
+            <td>[[${user.enabled}]]</td>
+
             <td>
               <a class="h4 mr-3" th:href="@{'/users/edit/'+ ${user.id}}">Edit</a>
               <a class="h4"th:href="@{'/users/delete/'+${user.id}}">Delete</a>
